--- a/styles.css
+++ b/styles.css
@@ -4,7 +4,7 @@ body {
 
 .buttons button {
   white-space: nowrap;
-  margin: 5px 5px 5px 0px;
+  margin: 5px 5px 5px 0;
   cursor: pointer;
   padding: 10px;
   border: 1px solid white;
@@ -18,7 +18,8 @@ body {
 }
 
 * {
-  -webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* Stops flash on tap iOS */
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
+  /* Stops flash on tap iOS */
 }
 
 .toggle-input {
@@ -31,13 +32,14 @@ body {
   cursor: pointer;
   display: block;
   position: relative;
-  box-shadow: inset 0 0 0px 1px #d5d5d5;
+  box-shadow: inset 0 0 0 1px #d5d5d5;
   text-indent: 48px;
   height: 20px;
   width: 40px;
   border-radius: 10px;
   white-space: nowrap;
-  font-size: 10px;
+  font-size: 13px;
+  line-height: 20px;
 }
 
 .toggle-input + label:before {
@@ -50,7 +52,7 @@ body {
   left: 0;
   border-radius: 10px;
   background: rgba(19, 191, 17, 0);
-  transition: 0.25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 .toggle-input + label:after {
@@ -64,7 +66,7 @@ body {
   border-radius: 10px;
   background: white;
   box-shadow: inset 0 0 0 1px rgba(0, 0, 0, 0.2), 0 2px 4px rgba(0, 0, 0, 0.2);
-  transition: 0.25s ease-in-out;
+  transition: .25s ease-in-out;
 }
 
 .toggle-input:checked + label:before {
@@ -75,4 +77,51 @@ body {
 .toggle-input:checked + label:after {
   left: 20px;
   box-shadow: inset 0 0 0 1px rgba(19, 191, 17, 1), 0 2px 4px rgba(0, 0, 0, 0.2);
+}
+
+select {
+  -webkit-appearance: button;
+  -webkit-border-radius: 2px;
+  -webkit-box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+  -webkit-padding-end: 20px;
+  -webkit-padding-start: 2px;
+  -webkit-user-select: none;
+  background-image: url(http://i62.tinypic.com/15xvbd5.png), -webkit-linear-gradient(#FAFAFA, #F4F4F4 40%, #E5E5E5);
+  background-position: 97% center;
+  background-repeat: no-repeat;
+  border: 1px solid #AAA;
+  color: #555;
+  font-size: inherit;
+  margin: 0px;
+  overflow: hidden;
+  padding: 5px 10px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  width: 150px;
+}
+
+button {
+  padding: 5px 10px;
+  background: #58aa00 repeat-x bottom;
+  border: none;
+  color: #fff;
+  cursor: pointer;
+  font-weight: bold;
+  border-radius: 5px;
+  -moz-border-radius: 5px;
+  -webkit-border-radius: 5px;
+  text-shadow: 1px 1px #666;
+  width: 90%;
+  margin-top: .5em;
+}
+
+.button:hover {
+  background-position: 0 -48px;
+}
+
+.button:active {
+  background-position: 0 top;
+  position: relative;
+  top: 1px;
+  padding: 6px 10px 4px;
 }
